# data-engineering-bootcamp

./: .gitignore
00-bootcamp-project/: load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgres.py  main-sftp.py  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: extract.py  fetch.sh  load.sh
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: load_table_from_csv.py
04-data-pipelines-with-apache-airflow/dags/: my_first_dag.py  my_second_dag.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py
playground/: extract.py  pyproject.toml
