[tool.poetry]
name = "00-bootcamp-project"
version = "0.1.0"
description = ""
authors = ["Sahatsarin Pawanna <58083752+Ricecamera@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "00_bootcamp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
requests = "^2.31.0"
pysftp = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
