[tool.poetry]
name = "00-bootcamp-project"
version = "0.1.0"
description = ""
authors = ["Sahatsarin Pawanna <58083752+Ricecamera@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "00_bootcamp_project"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"
pysftp = "^0.2.9"
psycopg2 = "^2.9.6"
google-cloud-bigquery = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
