[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Sahatsarin Pawanna <58083752+Ricecamera@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
